<resources>
    <string name="app_name">Your Tour</string>
    <string name="title_activity_testing">testing_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="title_activity_edit">Edit Image Meta Data</string>
    <string name="imageTitle">Title</string>
    <string name="imageDescription">Description</string>
    <string name="imageTripTitle">TripTitle</string>
    <string name="imageDateTime">DateTime</string>
    <string name="imageLatitude">Latitude</string>
    <string name="imageLongitude">Longitude</string>
    <string name="imageBarometricPressure">BarometricPressure</string>
    <string name="imageTemperature">Temperature</string>

    <string name="btnCancel">Cancel</string>
    <string name="btnSave">Save</string>
    <string name="btnDelete">Delete</string>
    <string name="image_title_label">Title</string>
    <string name="title_activity_maps">Your Tour</string>
    <string name="title_activity_gallery">Image gallery</string>

    <string name="title_activity_show_image_activity">Image Meta Data</string>
    <string name="title_activity_maps_image_location">Image Location</string>

    <!-- Tab bar labels   -->
    <!--    <string name="title_activity_maps">MapsActivity</string>-->
</resources>