<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="53dp"
    tools:layout_editor_absoluteY="86dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        tools:context=".EditActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/edit_appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/editor_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="Title"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>


        <ImageView
            android:id="@+id/edit_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_image_title_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_appBarLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_image_title_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/image_title_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_image_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textAutoCorrect"
                android:singleLine="true"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_image_description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/imageDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_image_title_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_image_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoCorrect"
                android:singleLine="false"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--    trip title-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_image_trip_title_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/imageTripTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_image_description_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_image_trip_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoCorrect"
                android:singleLine="false"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--    date time-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_image_date_time_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/imageDateTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_image_trip_title_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_image_date_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoCorrect"
                android:singleLine="false"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--    latitue-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_image_latitude_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/imageLatitude"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_image_date_time_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_image_latitue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoCorrect"
                android:singleLine="false"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--    longitude-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_image_longitude_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/imageLongitude"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_image_latitude_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_image_longitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoCorrect"
                android:singleLine="false"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--    barometric pressure-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_image_barometric_pressure_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/imageBarometricPressure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_image_longitude_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_image_barometric_pressure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoCorrect"
                android:singleLine="false"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--    temperature -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_image_temperature_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/imageTemperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_image_barometric_pressure_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_image_temperature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoCorrect"
                android:singleLine="false"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/delete_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/btnDelete"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/save_button"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/save_button" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/cancel_button"
            app:layout_constraintStart_toEndOf="@id/delete_button"
            app:layout_constraintTop_toBottomOf="@+id/edit_image_temperature_label"
            tools:layout_editor_absoluteY="864dp" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/btnCancel"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/save_button"
            app:layout_constraintTop_toTopOf="@+id/save_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>